# Diffy

./: .gitignore  CLAUDE.md  CNAME  LICENSE  README.md  benchmark.py  benchmark_real.py  calc.html  decode.html  diffy.html  index.html  setup.py  splats.html  test_quality.py
diffy/: __init__.py
diffy-bridge/: pyproject.toml
diffy-bridge/diffy_bridge/: __init__.py  cli.py  dataset.py  export.py  reader.py
diffy-native/: Cargo.toml
diffy-native/src/: lib.rs
diffycodec/: __init__.py  background.py  bench.py  bitstream.py  cycle_detector.py  decoder.py  encoder.py  gaussian_splatting.py  residual_codec.py  slam.py  temporal_codec.py  vq_codec.py
egocodec/: __init__.py  background.py  bench.py  bitstream.py  decoder.py  encoder.py  imu.py  residual_codec.py  temporal_codec.py  vq_codec.py
egocodec-wasm/: Cargo.toml
egocodec-wasm/src/: background.rs  bitstream.rs  cycle_detector.rs  decoder.rs  encoder.rs  gaussian_splatting.rs  lib.rs  residual_codec.rs  slam.rs  tests.rs
tests/: test_codec.py
