[package]
name = "egocodec-wasm"
version = "0.1.0"
edition = "2021"
description = "Diffy difference video codec — Rust WASM encoder"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
rustdct = "0.7"
jpeg-encoder = "0.6"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
